--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "crossword_club",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.jsx --fix .",
-    "style": "npx stylelint \\\"client/**/*.less\\\" --fix"
+    "lint": "eslint --ext .js,.jsx --fix . && npx stylelint \"app/**/*.scss\" --fix"
   },
   "dependencies": {
     "@babel/preset-react": "^7.10.1",
@@ -34,6 +33,8 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
