--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
     "formik": "^2.1.4",
+    "immer": "^7.0.5",
     "input-range-scss": "^1.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
